--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<p class="header-subtitle">Верстка на HTML/CSS<br>
 						Разработка сайтов под ключ</p>
 						<div class="header-button-block">
-							<button class="header-button">Связаться</button>
+							<a href="mailto:max.zenkovich@gmail.com" class="header-button">Связаться</a>
 							<small><sup>*</sup>Это бесплатно</small>
 						</div>
 					</div>
@@ -93,7 +93,7 @@
 						</div>
 						<div class="footer-cta-block">
 							<p class="footer-cta">Напишите мне:</p>
-							<button class="footer-button">Написать</button>
+							<a href="mailto:max.zenkovich@gmail.com" class="footer-button">Написать</a>
 						</div>
 					</div>
 				</div>
